test/files/neg/t6124.scala

trait T {
  def i: Int = 123_456_
  def j: Long = 123_456_L * 1000
  //def k = 123'455'

  def f = 3_14_E-2
  def e = 3_14E-_2
  def d = 3_14E-2_

  def p = 3.1_4_
  def q = 3.1_4_d
  def r = 3.1_4_dd

  def z = 0
}
